Import of GFUJI/MouseX-NativeTraits-0.001_02 from CPAN.
gitpan-cpan-distribution: MouseX-NativeTraits
gitpan-cpan-version:      0.001_02
gitpan-cpan-path:         GFUJI/MouseX-NativeTraits-0.001_02.tar.gz
gitpan-cpan-author:       GFUJI
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension MouseX::NativeTraits
 
+0.001_02 Mon Feb 22 17:42:50 2010
+    - Improve docs
+
 0.001_01 Sat Feb 20 15:49:59 2010
     - first dev-release
 
